--- a/portfolio.html
+++ b/portfolio.html
@@ -146,6 +146,21 @@
               <i class="devicon-jquery-plain"></i>
             </div>
           </div>
+          <div class="project">
+            <h3>Meet App</h3>
+            <img src="./img/meet_app.png" alt="" class="project_image">
+            <div class="project_link__tags">
+              <a href="https://github.com/patricklemmer/meet" target="_blank">Source</a>
+              <a href="https://patricklemmer.github.io/meet/" target="_blank">Demo</a>
+            </div>
+            <p class="project_description">PWA React app built on the TDD technique &
+              Google API.</p>
+            <div class="project_icons">
+              <i class="devicon-react-original"></i>
+              <i class="devicon-amazonwebservices-original"></i>
+              <i class="devicon-google-plain"></i>
+            </div>
+          </div>
         </section>
       </article>
     </main>
